Add job search UI form and open to jobs page

--- a/hacker-news-jobs/public/manifest.json
+++ b/hacker-news-jobs/public/manifest.json
@@ -12,6 +12,9 @@
   },
   "manifest_version": 3,
   "version": "1.0",
+  "permissions": [
+    "tabs"
+  ],
   "host_permissions": [
     "https://news.ycombinator.com/*"
   ],
